src/snapshots/treetop_core__engine__tests__evaluate__test_namespaces__alice_namespace_furniture_deny.snap
---
source: src/engine/tests/evaluate.rs
expression: decision
---
{
  "Deny": {
    "version": {
      "hash": "3e08780bcab1195040be80a026ea6acec1eef12e0f5a8cca2550eb1b4bb6b5c2",
      "loaded_at": "[timestamp]",
      "label_set": null,
      "generation": 1
    }
  }
}
